<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity"
        android:background="@android:color/black">

    <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/pink_transparent">

        <TextView
                android:id="@+id/title_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textColor="@color/pink"
                android:layout_gravity="top|center"
                android:layout_marginTop="24dp"
                android:textSize="42sp"
                android:textStyle="bold"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center"
                      android:gravity="center">

            <FrameLayout android:id="@+id/main_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:foreground="?attr/selectableItemBackground">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:padding="12dp"
                        android:textColor="@android:color/white"
                        android:text="@string/main_infos"/>

            </FrameLayout>

            <FrameLayout android:id="@+id/main_alimentation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="42dp"
                         android:foreground="?attr/selectableItemBackground">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:padding="12dp"
                        android:textColor="@android:color/white"
                        android:text="@string/main_alimentation"/>

            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>