<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@android:color/background_light">


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/pink"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:orientation="horizontal"
                    android:padding="12dp">

                <ImageView
                        android:id="@+id/food_detail_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_back_white_24dp"
                        tools:ignore="ContentDescription"/>

                <TextView
                        android:id="@+id/food_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="12dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        tools:text="@string/main_alimentation"
                        tools:ignore="RtlSymmetry"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="12dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_margin="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/avis"
                    tools:ignore="RtlSymmetry"/>

            <TextView android:id="@+id/food_detail_avis"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:gravity="start"
                      android:layout_margin="20dp"
                      android:layout_gravity="start"
                      android:textColor="@android:color/black"/>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/black"
                  android:layout_marginTop="20dp"
                  android:layout_margin="20dp"
                  android:layout_marginBottom="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="12dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_margin="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/information"
                    tools:ignore="RtlSymmetry"/>

            <TextView android:id="@+id/food_detail_information"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:gravity="start"
                      android:layout_margin="20dp"
                      android:layout_gravity="start"
                      android:textColor="@android:color/black"/>

            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:background="@android:color/black"
                  android:layout_marginTop="20dp"
                  android:layout_margin="20dp"
                  android:layout_marginBottom="20dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="12dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_margin="20dp"
                    android:textColor="@android:color/black"
                    android:text="@string/risk"
                    tools:ignore="RtlSymmetry"/>

            <TextView android:id="@+id/food_detail_risk"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:gravity="start"
                      android:layout_margin="20dp"
                      android:layout_gravity="start"
                      android:textColor="@android:color/black"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/food_detail_share"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_share_white_24dp"
            android:layout_margin="20dp"/>

</FrameLayout>